enhance tests logging

--- a/build.gradle
+++ b/build.gradle
@@ -22,5 +22,5 @@ dependencies {
 }
 
 test {
-    testLogging.showStandardStreams = true
+    testLogging { events 'started', 'passed', 'failed', 'skipped', 'standard_out', 'standard_error'}
 }
